# comprehensive-rust-exercises

./: .gitignore  Cargo.toml
src/borrowing/src/: main.rs
src/control-flow-basics/: Cargo.toml
src/control-flow-basics/src/: main.rs
src/error-handling/: Cargo.toml
src/error-handling/src/: main.rs
src/generics/src/: main.rs
src/iterators/src/: main.rs
src/memory-management/src/: main.rs
src/methods-and-traits/: Cargo.toml
src/methods-and-traits/src/: main.rs
src/modules/src/: widgets.rs
src/modules/src/widgets/: button.rs  label.rs  window.rs
src/pattern-matching/src/: main.rs
src/references/src/: main.rs
src/slices-and-lifetimes/: Cargo.toml
src/slices-and-lifetimes/src/: main.rs
src/smart-pointers/src/: main.rs
src/std-traits/: Cargo.toml
src/std-traits/src/: main.rs
src/std-types/: Cargo.toml
src/std-types/src/: main.rs
src/testing/src/: main.rs
src/tuples-and-arrays/: Cargo.toml
src/tuples-and-arrays/src/: main.rs
src/types-and-values/: Cargo.toml
src/types-and-values/src/: main.rs
src/unsafe-rust/src/: main.rs
src/user-defined-types/: Cargo.toml
src/user-defined-types/src/: main.rs
