[workspace]
resolver = "2"
members = [
    "src/types-and-values",
    "src/control-flow-basics",
    "src/tuples-and-arrays",
    "src/references",
    "src/user-defined-types",
    "src/pattern-matching",
    "src/methods-and-traits",
    "src/generics",
    "src/std-types",
    "src/std-traits",
    "src/memory-management",
    "src/smart-pointers",
    "src/borrowing",
    "src/slices-and-lifetimes",
    "src/iterators",
    "src/modules",
    "src/testing",
]
